--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -14,6 +14,10 @@ footer.page-footer{
   padding-top: 0;
 }
 
+.control-inputs button {
+  margin-bottom: 3px;
+}
+
 #input {
   z-index: 2;
   position: absolute;
