close #42 Fix cursor on anchor tags

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -25,6 +25,10 @@ img.occurrence {
   mix-blend-mode: difference;
 }
 
+a, button, i {
+  cursor: pointer;
+}
+
 .control-inputs button {
   margin-bottom: 3px;
 }
